<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_toolbar"
        app:title="@string/title_all_characters"
        app:titleTextColor="@color/title_text_color_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/pbLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/llEmptyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_message_no_characters" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llErrorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/error_message_characters_could_not_be_loaded" />

            <Button
                android:id="@+id/btnRetry2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCharacters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_character"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:padding="@dimen/default_padding" />

    </FrameLayout>


</LinearLayout>
