<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/default_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCharacterContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_character_list_item">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="@dimen/default_character_image_width"
            android:layout_height="0dp"
            android:contentDescription="@string/cd_character_image"
            android:scaleType="centerCrop"
            tools:src="@drawable/default_character_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="test" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/small_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/round"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:text="test" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_character_last_location"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="Citadel of Ricks" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/content_description_favorite_character_button"
            android:src="@drawable/ic_character_favorite"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:tint="@color/character_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>