<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_toolbar"
        app:title="@string/title_detail_character"
        app:titleTextColor="@color/title_text_color_toolbar" />

    <FrameLayout
        android:id="@+id/flLoader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/default_margin" />

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvCharacterContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="@dimen/big_corner_radius"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/ivImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/default_character_image"
                            android:contentDescription="@string/cd_character_image"
                            android:scaleType="centerCrop" />

                        <ImageView
                            android:id="@+id/ivFavorite"
                            android:layout_width="@dimen/big_character_image_width"
                            android:layout_height="@dimen/big_character_image_height"
                            android:layout_margin="@dimen/big_margin"
                            android:contentDescription="@string/content_description_favorite_character_button"
                            android:src="@drawable/ic_character_favorite"
                            android:layout_alignParentEnd="true"
                            app:tint="@color/character_favorite" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvName"
                android:textSize="@dimen/big_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvStatus"
                android:textSize="@dimen/default_text"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:drawablePadding="@dimen/small_padding"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvSpecies"
                android:layout_marginTop="@dimen/default_padding"
                android:textSize="@dimen/big_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvType"
                android:textSize="@dimen/default_text"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_marginTop="@dimen/default_padding"
                android:textSize="@dimen/big_text"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/default_padding"
                android:textSize="@dimen/default_text"
                android:textColor="@color/black"
                android:text="@string/title_origin_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvOrigin"
                android:textSize="@dimen/big_text"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/default_padding"
                android:textSize="@dimen/default_text"
                android:textColor="@color/black"
                android:text="@string/character_last_known_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvLocation"
                android:textSize="@dimen/big_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>